--- a/client/components/MenuView.css
+++ b/client/components/MenuView.css
@@ -38,7 +38,3 @@ hr {
   height: auto;
   max-height: 1000px;
 }
-
-.myFloat{
-  margin: 0 50% 0 50%;
-}
