--- a/client/components/Modal.css
+++ b/client/components/Modal.css
@@ -2,8 +2,8 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 20%;
-  height: 20%;
+  width: 20px;
+  height: 20px;
   background: transparent;
 }
 
